--- a/BSiNS/CanvasManifest.json
+++ b/BSiNS/CanvasManifest.json
@@ -137,6 +137,7 @@
     "xmlNalogZaPrenos",
     "xmlNalogZaProdaju",
     "xmlPrimke",
-    "xmlTemeljniceInventure"
+    "xmlTemeljniceInventure",
+    "scr_XMLOtpremnice"
   ]
 }
