--- a/BSiNS/Src/scrEntry.fx.yaml
+++ b/BSiNS/Src/scrEntry.fx.yaml
@@ -957,164 +957,187 @@
                 ZIndex: =7
 
                 hrzcon_GetAllFilesDDs As groupContainer.horizontalAutoLayoutContainer:
-                    DropShadow: =DropShadow.Light
                     FillPortions: =0
-                    Height: =50
-                    LayoutAlignItems: =LayoutAlignItems.Stretch
+                    Height: =60
+                    LayoutAlignItems: =LayoutAlignItems.Center
                     LayoutGap: =15
                     LayoutJustifyContent: =LayoutJustifyContent.SpaceBetween
                     LayoutMinHeight: =100
                     LayoutMinWidth: =250
                     LayoutMode: =LayoutMode.Auto
+                    PaddingBottom: =10
+                    PaddingLeft: =10
+                    PaddingRight: =10
+                    PaddingTop: =10
                     RadiusBottomLeft: =4
                     RadiusBottomRight: =4
                     RadiusTopLeft: =4
                     RadiusTopRight: =4
                     ZIndex: =1
 
-                    dd_Status As Dropdown.pcfdataset:
-                        DefaultSelectedItems: |-
-                            =[{Id: "All", Text: "All"}]
-                        DisplayMode: =DisplayMode.Edit
-                        FillPortions: =1
-                        FontSize: =18
+                    con_Status As groupContainer.manualLayoutContainer:
+                        AlignInContainer: =AlignInContainer.SetByContainer
+                        DropShadow: =DropShadow.Light
                         Height: =50
-                        Items: |-
-                            =[{Id: "All", Text: "All"}, {Id: "ReadyForProcessing", Text: "Ready for processing"}, {Id: "InProgress", Text: "In progress"}]
-                        LayoutMinHeight: =32
-                        LayoutMinWidth: =320
-                        OnChange: |-
-                            =If(
-                                Not(dd_FileType.Selected.Id = "0"),
-                                UpdateContext(
-                                    {
-                                        filteredFiles: Filter(
-                                            XMLFiles,
-                                            dd_FileType.Selected.Id = ThisRecord.FileType
-                                        )
-                                    }
-                                ),
-                                UpdateContext({filteredFiles: XMLFiles})
-                            );
-                            If(
-                                Not(dd_Status.Selected.Id = "All"),
-                                UpdateContext(
-                                    {
-                                        filteredFiles: Filter(
-                                            filteredFiles,
-                                            dd_Status.Selected.Id = ThisRecord.FolderName
-                                        )
-                                    }
-                                )
-                            );
-                        Width: =652
-                        X: =0
-                        Y: =0
+                        LayoutMinHeight: =50
+                        LayoutMinWidth: =250
+                        RadiusBottomLeft: =4
+                        RadiusBottomRight: =4
+                        RadiusTopLeft: =4
+                        RadiusTopRight: =4
                         ZIndex: =1
 
-                        TextInput2 As pcfDataField.textualColumn:
-                            FieldDisplayName: ="Text"
-                            FieldName: ="Text"
-                            FieldType: ="s"
-                            FieldVariantName: ="textualColumn"
-                            Order: =1
-                            ZIndex: =13
+                        dd_Status As Dropdown.pcfdataset:
+                            DefaultSelectedItems: |-
+                                =[{Id: "All", Text: "All"}]
+                            DisplayMode: =DisplayMode.Edit
+                            FontSize: =18
+                            Height: =Parent.Height
+                            Items: |-
+                                =[{Id: "All", Text: "All"}, {Id: "ReadyForProcessing", Text: "Ready for processing"}, {Id: "InProgress", Text: "In progress"}]
+                            OnChange: |-
+                                =If(
+                                    Not(dd_FileType.Selected.Id = "0"),
+                                    UpdateContext(
+                                        {
+                                            filteredFiles: Filter(
+                                                XMLFiles,
+                                                dd_FileType.Selected.Id = ThisRecord.FileType
+                                            )
+                                        }
+                                    ),
+                                    UpdateContext({filteredFiles: XMLFiles})
+                                );
+                                If(
+                                    Not(dd_Status.Selected.Id = "All"),
+                                    UpdateContext(
+                                        {
+                                            filteredFiles: Filter(
+                                                filteredFiles,
+                                                dd_Status.Selected.Id = ThisRecord.FolderName
+                                            )
+                                        }
+                                    )
+                                );
+                            Width: =Parent.Width
+                            X: =0
+                            Y: =0
+                            ZIndex: =1
 
-                    dd_FileType As Dropdown.pcfdataset:
-                        DefaultSelectedItems: |-
-                            =[
-                                {
-                                    Id: "0",
-                                    Text: "All"
-                                }
-                            ]
-                        DisplayMode: =DisplayMode.Edit
-                        FillPortions: =1
-                        FontSize: =18
+                            TextInput2 As pcfDataField.textualColumn:
+                                FieldDisplayName: ="Text"
+                                FieldName: ="Text"
+                                FieldType: ="s"
+                                FieldVariantName: ="textualColumn"
+                                Order: =1
+                                ZIndex: =13
+
+                    con_FileType As groupContainer.manualLayoutContainer:
+                        AlignInContainer: =AlignInContainer.SetByContainer
+                        DropShadow: =DropShadow.Light
                         Height: =50
-                        Items: |-
-                            =[
-                                {
-                                    Id: "0",
-                                    Text: "All"
-                                },
-                                {
-                                    Id: "01",
-                                    Text: "Temeljnice inventure"
-                                },
-                                {
-                                    Id: "02",
-                                    Text: "Nabavni nalozi"
-                                },
-                                {
-                                    Id: "03",
-                                    Text: "Prodajni nalozi"
-                                },
-                                {
-                                    Id: "04",
-                                    Text: "Nalozi za prenos"
-                                },
-                                {
-                                    Id: "05",
-                                    Text: "Skladišne primke"
-                                },
-                                {
-                                    Id: "06",
-                                    Text: "Skladišne otpremnice"
-                                },
-                                {
-                                    Id: "07",
-                                    Text: "Put-Away Request"
-                                },
-                                {
-                                    Id: "08",
-                                    Text: "Pick Request"
-                                }
-                            ]
-                        LayoutMinHeight: =32
-                        LayoutMinWidth: =320
-                        OnChange: |
-                            =If(
-                                Not(dd_FileType.Selected.Id = "0"),
-                                UpdateContext(
-                                    {
-                                        filteredFiles: Filter(
-                                            XMLFiles,
-                                            dd_FileType.Selected.Id = ThisRecord.FileType
-                                        )
-                                    }
-                                ),
-                                UpdateContext({filteredFiles: XMLFiles})
-                            );
-                            If(
-                                Not(dd_Status.Selected.Id = "All"),
-                                UpdateContext(
-                                    {
-                                        filteredFiles: Filter(
-                                            filteredFiles,
-                                            dd_Status.Selected.Id = ThisRecord.FolderName
-                                        )
-                                    }
-                                )
-                            );
-                        Width: =647
-                        X: =0
-                        Y: =0
+                        LayoutMinHeight: =50
+                        LayoutMinWidth: =250
+                        RadiusBottomLeft: =4
+                        RadiusBottomRight: =4
+                        RadiusTopLeft: =4
+                        RadiusTopRight: =4
+                        Width: =411
                         ZIndex: =2
 
-                        TextInput1 As pcfDataField.textualColumn:
-                            FieldDisplayName: ="Text"
-                            FieldName: ="Text"
-                            FieldType: ="s"
-                            FieldVariantName: ="textualColumn"
-                            Order: =1
-                            ZIndex: =11
+                        dd_FileType As Dropdown.pcfdataset:
+                            DefaultSelectedItems: |-
+                                =[
+                                    {
+                                        Id: "0",
+                                        Text: "All"
+                                    }
+                                ]
+                            DisplayMode: =DisplayMode.Edit
+                            FontSize: =18
+                            Height: =Parent.Height
+                            Items: |-
+                                =[
+                                    {
+                                        Id: "0",
+                                        Text: "All"
+                                    },
+                                    {
+                                        Id: "01",
+                                        Text: "Temeljnice inventure"
+                                    },
+                                    {
+                                        Id: "02",
+                                        Text: "Nabavni nalozi"
+                                    },
+                                    {
+                                        Id: "03",
+                                        Text: "Prodajni nalozi"
+                                    },
+                                    {
+                                        Id: "04",
+                                        Text: "Nalozi za prenos"
+                                    },
+                                    {
+                                        Id: "05",
+                                        Text: "Skladišne primke"
+                                    },
+                                    {
+                                        Id: "06",
+                                        Text: "Skladišne otpremnice"
+                                    },
+                                    {
+                                        Id: "07",
+                                        Text: "Put-Away Request"
+                                    },
+                                    {
+                                        Id: "08",
+                                        Text: "Pick Request"
+                                    }
+                                ]
+                            OnChange: |
+                                =If(
+                                    Not(dd_FileType.Selected.Id = "0"),
+                                    UpdateContext(
+                                        {
+                                            filteredFiles: Filter(
+                                                XMLFiles,
+                                                dd_FileType.Selected.Id = ThisRecord.FileType
+                                            )
+                                        }
+                                    ),
+                                    UpdateContext({filteredFiles: XMLFiles})
+                                );
+                                If(
+                                    Not(dd_Status.Selected.Id = "All"),
+                                    UpdateContext(
+                                        {
+                                            filteredFiles: Filter(
+                                                filteredFiles,
+                                                dd_Status.Selected.Id = ThisRecord.FolderName
+                                            )
+                                        }
+                                    )
+                                );
+                            Width: =Parent.Width
+                            X: =0
+                            Y: =0
+                            ZIndex: =1
+
+                            TextInput1 As pcfDataField.textualColumn:
+                                FieldDisplayName: ="Text"
+                                FieldName: ="Text"
+                                FieldType: ="s"
+                                FieldVariantName: ="textualColumn"
+                                Order: =1
+                                ZIndex: =11
 
                     icn_ReloadFiles As icon.Reload:
                         BorderColor: =RGBA(89, 0, 0, 1)
                         Color: =RGBA(89, 0, 0, 1)
                         DisabledBorderColor: =RGBA(0, 0, 0, 0)
                         DisabledColor: =RGBA(214, 221, 224, 1)
+                        Height: =50
                         Icon: =Icon.Reload
                         LayoutMinHeight: =32
                         OnSelect: |
