--- a/BSiNS/CanvasManifest.json
+++ b/BSiNS/CanvasManifest.json
@@ -133,11 +133,11 @@
   },
   "ScreenOrder": [
     "scrEntry",
-    "xmlNabavniNalog",
-    "xmlNalogZaPrenos",
-    "xmlNalogZaProdaju",
-    "xmlPrimke",
-    "xmlTemeljniceInventure",
+    "scr_XMLNabavniNalog",
+    "scr_XMLNalogZaPrenos",
+    "scr_XMLNalogZaProdaju",
+    "scr_XMLPrimke",
+    "scr_XMLTemeljniceInventure",
     "scr_XMLOtpremnice"
   ]
 }
