--- a/BSiNS/Src/scr_XMLOtpremnice.fx.yaml
+++ b/BSiNS/Src/scr_XMLOtpremnice.fx.yaml
@@ -855,6 +855,7 @@ scr_XMLOtpremnice As screen:
                         txt_EditForm As Text:
                             DisplayMode: =DisplayMode.Edit
                             FillPortions: =1
+                            FontColor: =
                             Height: =32
                             LayoutMinHeight: =50
                             LayoutMinWidth: =96
