--- a/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
+++ b/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
@@ -538,6 +538,15 @@
                     Y: =122
                     ZIndex: =11
 
+                TextCanvas1 As Text:
+                    DisplayMode: =DisplayMode.Edit
+                    Height: =91
+                    Text: ="Text  ->>> " & nabavniNalogReadyForNavCheckbox.Checked
+                    Width: =146
+                    X: =621
+                    Y: =91
+                    ZIndex: =24
+
                 DocumentType_NN_Group As group:
                     Height: =5
                     Width: =5
