--- a/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
+++ b/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
@@ -538,6 +538,15 @@
                     Y: =122
                     ZIndex: =11
 
+                TextCanvas2 As Text:
+                    DisplayMode: =DisplayMode.Edit
+                    Height: =29
+                    Text: ="Text->>>> "& nabavniNalogReadyForNavCheckbox.Checked
+                    Width: =246
+                    X: =721
+                    Y: =122
+                    ZIndex: =24
+
                 DocumentType_NN_Group As group:
                     Height: =5
                     Width: =5
