--- a/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
+++ b/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
@@ -2,8 +2,7 @@
     Fill: =RGBA(234, 83, 109, 1)
     LoadingSpinnerColor: =RGBA(164, 38, 44, 1)
     OnVisible: |-
-        =UpdateContext({nabavniNalogReadyForNavCheckbox: false});
-        If(!IsBlank(SelectedFile),
+        =If(!IsBlank(SelectedFile),
         IfError(GetXML_Nabavni_Nalog.Run(SelectedFile, SelectedFolder),
             Notify("Error occurred while Get request, check if file exists.",NotificationType.Error,5000),
             UpdateContext({purchase: GetXML_Nabavni_Nalog.Run(SelectedFile, SelectedFolder)})
