--- a/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
+++ b/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
@@ -873,6 +873,7 @@
 
             nabavniNalogReadyForNavCheckbox As Checkbox:
                 AlignInContainer: =AlignInContainer.Start
+                Checked: =false
                 DisplayMode: =DisplayMode.Edit
                 FontUnderline: =false
                 FontWeight: =FontWeight.Bold
