--- a/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
+++ b/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
@@ -1124,7 +1124,7 @@
             Notify(file_Name);*/
             
             //If(!isCreated,UpdateXML.Run(purchaseJsonData, file_Name, SelectedFolder, true));
-            UpdateXML.Run(purchaseJsonData, file_Name, SelectedFolder, true);
+            UpdateXML.Run(purchaseJsonData, file_Name, SelectedFolder, nabavniNalogReadyForNavCheckbox.Checked);
         Size: =15
         Text: ="Save"
         Width: =225
