--- a/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
+++ b/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
@@ -539,15 +539,6 @@
                     Y: =122
                     ZIndex: =11
 
-                TextCanvas2 As Text:
-                    DisplayMode: =DisplayMode.Edit
-                    Height: =29
-                    Text: ="Text->>>> "& nabavniNalogReadyForNavCheckbox.Checked
-                    Width: =246
-                    X: =721
-                    Y: =122
-                    ZIndex: =24
-
                 DocumentType_NN_Group As group:
                     Height: =5
                     Width: =5
@@ -866,8 +857,8 @@
                 HoverColor: =RGBA(255, 255, 255, 1)
                 HoverFill: =ColorFade(RGBA(164, 38, 44, 1), -20%)
                 OnSelect: |-
-                    =Clear(colPurchaseLines);
-                    Collect(colPurchaseLines, colOriginalPurchaseLines);
+                    =ClearCollect(colPurchaseLines, colOriginalPurchaseLines);
+                    Reset(nabavniNalogReadyForNavCheckbox);
                 Size: =15
                 Text: ="Reset"
                 ZIndex: =5
