Revert "SmartMerge, using common parent: d3ca122f6cc36f7e1d9688c22c2b03d809eed0f4"
This reverts commit ac66cb9f4d997778933ddb9d7c35f076aa43e074, reversing
changes made to c66e65cee7156c0d00f6e0a09fa3a2e0e8958208.

--- a/BSiNS/CanvasManifest.json
+++ b/BSiNS/CanvasManifest.json
@@ -99,7 +99,7 @@
       "zeroalltabindexes": true
     },
     "Author": "",
-    "BindingErrorCount": 2,
+    "BindingErrorCount": 0,
     "ContainsThirdPartyPcfControls": false,
     "DefaultConnectedDataSourceMaxGetRowsCount": 500,
     "DocumentAppType": "DesktopOrTablet",
@@ -133,11 +133,11 @@
   },
   "ScreenOrder": [
     "scrEntry",
-    "scr_XMLNabavniNalog",
-    "scr_XMLNalogZaPrenos",
-    "scr_XMLNalogZaProdaju",
-    "scr_XMLPrimke",
-    "scr_XMLTemeljniceInventure",
+    "xmlNabavniNalog",
+    "xmlNalogZaPrenos",
+    "xmlNalogZaProdaju",
+    "xmlPrimke",
+    "xmlTemeljniceInventure",
     "scr_XMLOtpremnice"
   ]
 }
