--- a/BSiNS/Src/App.fx.yaml
+++ b/BSiNS/Src/App.fx.yaml
@@ -7,8 +7,7 @@ App As appinfo:
             Contacts,
             Email = User().Email
         );
-        //warehouseCode = "SGP-TEST";
-        warehouseCode = "AM-01";
+        warehouseCode = "SGP-TEST";
     OnStart: =
     StartScreen: =
     Theme: =PowerAppsTheme
