--- a/BSiNS/Src/scrEntry.fx.yaml
+++ b/BSiNS/Src/scrEntry.fx.yaml
@@ -1209,15 +1209,15 @@
                         =Switch(
                             Parent.Selected.FileType,
                             "01",
-                            Navigate(scr_XMLTemeljniceInventure),
+                            Navigate(xmlTemeljniceInventure),
                             "02",
-                            Navigate(scr_XMLNabavniNalog),
+                            Navigate(xmlNabavniNalog),
                             "03",
-                            Navigate(scr_XMLNalogZaProdaju),
+                            Navigate(xmlNalogZaProdaju),
                             "04",
-                            Navigate(scr_XMLNalogZaPrenos),
+                            Navigate(xmlNalogZaPrenos),
                             "05",
-                            Navigate(scr_XMLPrimke),
+                            Navigate(xmlPrimke),
                             "06",
                             Navigate(scr_XMLOtpremnice)
                         );
@@ -1259,15 +1259,15 @@
                             Switch(
                                 Parent.Selected.FileType,
                                 "01",
-                                Navigate(scr_XMLTemeljniceInventure),
+                                Navigate(xmlTemeljniceInventure),
                                 "02",
-                                Navigate(scr_XMLNabavniNalog),
+                                Navigate(xmlNabavniNalog),
                                 "03",
-                                Navigate(scr_XMLNalogZaProdaju),
+                                Navigate(xmlNalogZaProdaju),
                                 "04",
-                                Navigate(scr_XMLNalogZaPrenos),
+                                Navigate(xmlNalogZaPrenos),
                                 "05",
-                                Navigate(scr_XMLPrimke),
+                                Navigate(xmlPrimke),
                                 "06",
                                 Navigate(scr_XMLOtpremnice)
                             );
@@ -1360,7 +1360,7 @@
         FontWeight: =FontWeight.Semibold
         HoverColor: =RGBA(255, 255, 255, 1)
         HoverFill: =ColorFade(RGBA(164, 38, 44, 1), -20%)
-        OnSelect: =Navigate(scr_XMLTemeljniceInventure)
+        OnSelect: =Navigate(xmlTemeljniceInventure)
         Size: =12
         Text: ="TEMELJNICE INVENTURE"
         X: =442
@@ -1649,7 +1649,7 @@
         HoverColor: =RGBA(255, 255, 255, 1)
         HoverFill: =ColorFade(RGBA(164, 38, 44, 1), -20%)
         OnSelect: |
-            =Navigate(scr_XMLNabavniNalog)
+            =Navigate(xmlNabavniNalog)
         Size: =12
         Text: ="NABAVNI NALOG"
         X: =264
@@ -1665,7 +1665,7 @@
         FontWeight: =FontWeight.Semibold
         HoverColor: =RGBA(255, 255, 255, 1)
         HoverFill: =ColorFade(RGBA(164, 38, 44, 1), -20%)
-        OnSelect: =Navigate(scr_XMLNalogZaPrenos)
+        OnSelect: =Navigate(xmlNalogZaPrenos)
         Size: =12
         Text: ="NALOG ZA PRENOS"
         X: =618
@@ -1681,7 +1681,7 @@
         FontWeight: =FontWeight.Semibold
         HoverColor: =RGBA(255, 255, 255, 1)
         HoverFill: =ColorFade(RGBA(164, 38, 44, 1), -20%)
-        OnSelect: =Navigate(scr_XMLNalogZaProdaju)
+        OnSelect: =Navigate(xmlNalogZaProdaju)
         Size: =12
         Text: ="NALOG ZA PRODAJU"
         X: =799
@@ -1697,7 +1697,7 @@
         FontWeight: =FontWeight.Semibold
         HoverColor: =RGBA(255, 255, 255, 1)
         HoverFill: =ColorFade(RGBA(164, 38, 44, 1), -20%)
-        OnSelect: =Navigate(scr_XMLPrimke)
+        OnSelect: =Navigate(xmlPrimke)
         Size: =12
         Text: ="PRIMKE"
         X: =986
