Revert "Revert to working commit with existing screens"
This reverts commit 76c2ff6ff1d69d34af4e2000277a11d22a7d49ad.

--- a/BSiNS/Src/scrEntry.fx.yaml
+++ b/BSiNS/Src/scrEntry.fx.yaml
@@ -988,7 +988,6 @@
                         ZIndex: =1
 
                         dd_Status As Dropdown.pcfdataset:
-                            BasePaletteColor: =RGBA(249, 83, 109, 1)
                             DefaultSelectedItems: |-
                                 =[{Id: "All", Text: "All"}]
                             DisplayMode: =DisplayMode.Edit
@@ -1047,7 +1046,6 @@
                         ZIndex: =2
 
                         dd_FileType As Dropdown.pcfdataset:
-                            BasePaletteColor: =RGBA(249, 83, 109, 1)
                             DefaultSelectedItems: |-
                                 =[
                                     {
@@ -1303,7 +1301,7 @@
 
                 Spinner1 As Spinner:
                     Appearance: ='Spinner.Appearance'.Primary
-                    BasePaletteColor: =RGBA(249, 83, 109, 1)
+                    BasePaletteColor: =
                     DisplayMode: =DisplayMode.Edit
                     FillPortions: =1
                     FontColor: =
